Bugfixes. Shaders set to highp (otherwise artifacts on mobile devices). Restricted camera motion to only rotation and zoom. Navigation menu resized to fit smaller screens. Better default value for configuration page. Downsampling as an option to reduce memory usage.

--- a/includes/main.css
+++ b/includes/main.css
@@ -66,6 +66,7 @@ body {
     background-color: white;
     position: relative;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    overflow:hidden;
 }
 
 .active {
@@ -184,7 +185,7 @@ input[type='color']::-webkit-color-swatch {
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
     color: white;
-    position: fixed;
+    position: absolute;
     top: 5px;
     right: 5px;
     width: 250px;
@@ -220,10 +221,12 @@ input[type='color']::-webkit-color-swatch {
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
     color: white;
-    position: fixed;
+    position: absolute;
     top: 5px;
     left: 5px;
     width: 750px;
+    max-width: 90%;;
+    max-height: 80%;
     /*height: 300px;*/
     overflow-y: scroll;
     padding: 15px;
